// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeTableActionOptions should normalize complex table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "edit",
  "inHeader": false,
  "kind": "default",
  "name": "edit",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit User",
  "type": "edit",
}
`;

exports[`NormalizeTableActionOptions should normalize minimal table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": null,
  "inHeader": false,
  "kind": "default",
  "name": "delete",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;
